--- a/wp-content/themes/nfrontend/src/sass/style.scss
+++ b/wp-content/themes/nfrontend/src/sass/style.scss
@@ -1,10 +1,10 @@
 /*
-Theme Name: N digital studio
+Theme Name: N frontend
 Theme URI: https://wwww.n-digital.be
 Author: Nicky Rutten
 Author URI: https://www.n-digital.be
-Description: The Wordpress template for n-digital.be
-Version: 2.0
+Description: The Wordpress boilerplate for N digital studio
+Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ndigital
