renamed folder to duplicate

--- a/wp-content/themes/customer_base/src/sass/style.scss
+++ b/wp-content/themes/customer_base/src/sass/style.scss
@@ -1,7 +1,7 @@
 /*!
- Theme Name:   Customer X
- Theme URI:    https://www.customerx.be
- Description:  A wordpress template for Customer X
+ Theme Name:   Customer base theme
+ Theme URI:    https://www.customer.be
+ Description:  A wordpress template to copy for each customer
  Author:       You
  Author URI:   https://www.n-digital.be
  Template:     nfrontend
