--- a/wp-content/themes/customer_base/style.css
+++ b/wp-content/themes/customer_base/style.css
@@ -1,13 +1,13 @@
 ﻿/*!
- Theme Name:   Customer base theme
- Theme URI:    https://www.customer.be
- Description:  A wordpress template to copy for each customer
- Author:       You
- Author URI:   https://www.n-digital.be
- Template:     nfrontend
- Version:      1.0
- License:      GNU General Public License v2 or later
- License URI:  http://www.gnu.org/licenses/gpl-2.0.html
+Theme Name: Customer base theme
+Theme URI: https://www.customer.be
+Description: A wordpress template to copy for each customer
+Author: Nicky Rutten
+Author URI: https://www.n-digital.be
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Version: 1.0
+Template: nfrontend
 *//*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
